# nimtauri

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  GUIDEBOOK.md  LICENSE  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend-nim/: backend.nimble  nim.cfg
backend-nim/src/: dispatcher.nim  main.nim  protocol.nim
backend-nim/tests/: test_dispatcher.nim  test_protocol.nim
scripts/: build-sidecar.ts  clean.ts  format-nim.ts  prepare-build.ts  test-nim.ts  test-sidecar.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/api/: backend.test.ts  backend.ts  backend.types.ts  fetch.test.ts  fetch.ts  notification.test.ts  notification.ts
src/components/: AppHeader.vue  BackendStatus.vue  ErrorAlert.vue
src/router/: index.ts
src/stores/: backend.test.ts  backend.ts
src/views/: BackendDemoView.vue  HomeView.vue
