[package]
name = "tauri-vue-nim-template"
version = "0.1.0"
description = "Tauri Vue frontend with a Nim sidecar"
authors = ["Template contributors"]
edition = "2021"

[lib]
name = "tauri_vue_nim_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }
